[gd_scene load_steps=5 format=3 uid="uid://cn83g6fhqla0q"]

[ext_resource type="Script" path="res://Menu/Video.gd" id="1_n6k15"]
[ext_resource type="Script" path="res://Menu/BackButton.gd" id="1_qmlmr"]
[ext_resource type="Script" path="res://Menu/Audio.gd" id="2_wjxgo"]
[ext_resource type="PackedScene" uid="uid://bm2e782ijne7e" path="res://Menu/action_button.tscn" id="3_5sag8"]

[node name="Settings" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20

[node name="Video" type="TabBar" parent="UI/TabContainer"]
layout_mode = 2
script = ExtResource("1_n6k15")

[node name="BackButton" type="Button" parent="UI/TabContainer/Video"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Back"
script = ExtResource("1_qmlmr")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TabContainer/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -43.5
offset_right = 100.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TabContainer/Video/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="FullScreen" type="Label" parent="UI/TabContainer/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
size_flags_stretch_ratio = 15.55
theme_override_font_sizes/font_size = 35
text = "Full Screen"

[node name="Borderless" type="Label" parent="UI/TabContainer/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
size_flags_stretch_ratio = 15.55
theme_override_font_sizes/font_size = 35
text = "Borderless"

[node name="VSync" type="Label" parent="UI/TabContainer/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
size_flags_stretch_ratio = 15.55
theme_override_font_sizes/font_size = 35
text = "VSync"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/TabContainer/Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FullScreen" type="CheckBox" parent="UI/TabContainer/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 25

[node name="Borderless" type="CheckBox" parent="UI/TabContainer/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 25

[node name="VSync" type="OptionButton" parent="UI/TabContainer/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 25
item_count = 2
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="Audio" type="TabBar" parent="UI/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_wjxgo")

[node name="BackButton" type="Button" parent="UI/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Back"
script = ExtResource("1_qmlmr")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -38.5
offset_right = 129.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TabContainer/Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/TabContainer/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "Master"

[node name="Music" type="Label" parent="UI/TabContainer/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "Music"

[node name="SFX" type="Label" parent="UI/TabContainer/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "SFX"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/TabContainer/Audio/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Master" type="HSlider" parent="UI/TabContainer/Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
max_value = 1.0
step = 0.05

[node name="Music" type="HSlider" parent="UI/TabContainer/Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
max_value = 1.0
step = 0.05

[node name="SFX" type="HSlider" parent="UI/TabContainer/Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
max_value = 1.0
step = 0.05

[node name="Controls" type="TabBar" parent="UI/TabContainer"]
visible = false
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Back"
script = ExtResource("1_qmlmr")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -52.0
offset_right = 26.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TabContainer/Controls/HBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "UP"

[node name="Down" type="Label" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "DOWN"

[node name="Left" type="Label" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "LEFT"

[node name="Right" type="Label" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
text = "RIGHT"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/TabContainer/Controls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ActionButton" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_5sag8")]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35

[node name="ActionButton2" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_5sag8")]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
action = "ui_down"

[node name="ActionButton3" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_5sag8")]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
action = "ui_left"

[node name="ActionButton4" parent="UI/TabContainer/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_5sag8")]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 35
action = "ui_right"

[connection signal="pressed" from="UI/TabContainer/Video/BackButton" to="UI/TabContainer/Video/BackButton" method="_on_pressed"]
[connection signal="toggled" from="UI/TabContainer/Video/HBoxContainer/VBoxContainer2/FullScreen" to="UI/TabContainer/Video" method="_on_full_screen_toggled"]
[connection signal="toggled" from="UI/TabContainer/Video/HBoxContainer/VBoxContainer2/Borderless" to="UI/TabContainer/Video" method="_on_borderless_toggled"]
[connection signal="item_selected" from="UI/TabContainer/Video/HBoxContainer/VBoxContainer2/VSync" to="UI/TabContainer/Video" method="_on_v_sync_item_selected"]
[connection signal="pressed" from="UI/TabContainer/Audio/BackButton" to="UI/TabContainer/Audio/BackButton" method="_on_pressed"]
[connection signal="value_changed" from="UI/TabContainer/Audio/HBoxContainer/VBoxContainer2/Master" to="UI/TabContainer/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/TabContainer/Audio/HBoxContainer/VBoxContainer2/Music" to="UI/TabContainer/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/TabContainer/Audio/HBoxContainer/VBoxContainer2/SFX" to="UI/TabContainer/Audio" method="_on_sfx_value_changed"]
[connection signal="pressed" from="UI/TabContainer/Controls/BackButton" to="UI/TabContainer/Controls/BackButton" method="_on_pressed"]
